--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=buyogo
 
-spring.datasource.url=
+spring.datasource.url=jdbc:postgresql://localhost:port/db_name
+#chnage  localhost and port , dbname according toyou
 spring.datasource.username=
 spring.datasource.password=
 spring.datasource.driver-class-name=org.postgresql.Driver
