changed the enpoints

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=buyogo
 
+#add postgress sql url here
 spring.datasource.url=jdbc:postgresql://localhost:port/db_name
 #chnage  localhost and port , dbname according toyou
 spring.datasource.username=
